--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ display:none}
   <span style="font-size:12px">Avg rating of users-<b> 4.1/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.4/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.6/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63">View photos</a>
 </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
-    <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
+    <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 50 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> No (Macro lens)</span><br><span> No (Depth lens)</span><br><span> 16 MP (Front)</span></span>  </div>  
 </div>
     <a href="https://nanoreview.net/en/phone/xiaomi-poco-m4-pro-5g" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specs</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight3" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
@@ -472,9 +472,9 @@ display:none}
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 4</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Oppo A74 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
-    <img src="https://m.media-amazon.com/images/I/61WOprbvuUL._SY679_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
-<span class="bi bi-cpu" style="font-size:12px"> Qualcomm Snapdragon 480</span><br>
+<span class="bi bi-cpu" style="font-size:12px"> Qualcomm Snapdragon 480 (2 Ghz)</span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 18 W (Fast charging) </span><br>
@@ -484,17 +484,17 @@ display:none}
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
-    <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
+  <span style="font-size:12px">Avg rating of users-<b> 4/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.3/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63">View photos</a>
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
   <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden">
-  <span> 50 MP (Main)</span><br><span> No (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 8 MP (Front)</span></span>  </div>
+  <span> 48 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 16 MP (Front)</span></span>  </div>
   
   
   
   
   </div>
-    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
+    <a href="https://nanoreview.net/en/phone/oppo-a74-5g" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight4" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight4" aria-labelledby="offcanvasRightLabel4">
@@ -553,7 +553,7 @@ display:none}
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://rukminim1.flixcart.com/image/416/416/xif0q/mobile/o/b/a/-original-imaghbequzj25wy2.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
 <span style="color:blue"> Realme 9i 5G </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
