--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ display:none}
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
     <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 48 MP (Main)</span><br><span> No (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 8 MP (Front)</span></span>  </div>  
 </div>
-    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
+    <a href="https://nanoreview.net/en/phone/xiaomi-redmi-note-10t-5g" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight6" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight6" aria-labelledby="offcanvasRightLabel6">
