--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ display:none}
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
 <span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">6 GB & 64 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
-<a href="https://forms.gle/fgfZnf9w1XN7FYUe8" type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</a>
+<a href="https://forms.gle/4cqvoJXUFDzXwxZ3A" type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</a>
 </div>
 
 
