--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ display:none}
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 3</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Poco M4 pro 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
-    <img src="" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Dimensity 810(2.4 GHz)  </span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 4/6/8 GB(2133 Mhz)  </span><br>
@@ -436,7 +436,7 @@ display:none}
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://m.media-amazon.com/images/I/71poFSdDs5S._SX679_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
 <span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
@@ -447,7 +447,7 @@ display:none}
 <div style="position:absolute;top:400px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
 <span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
