--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ display:none}
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 3</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Poco M4 pro 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
-    <img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Dimensity 810(2.4 GHz)  </span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 4/6/8 GB(2133 Mhz)  </span><br>
