--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ display:none}
      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-<div style="height:400px;background-color:none;position:relative;border:1px solid #dddddd">
+<div style="display:none;height:400px;background-color:none;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
 <br> <br>   <iframe ></iframe>
 <div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:1px solid #dddddd">
