--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ display:none}
      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-<div style="height:400px;background-color:none;position:relative;border:1px solid #dddddd">
+<div style="display:none;height:400px;background-color:none;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
 <br> <br>   <iframe></iframe>
 <div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:1px solid #dddddd">
@@ -436,10 +436,10 @@ display:none}
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Poco M4 pro 5G </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 
@@ -447,10 +447,10 @@ display:none}
 <div style="position:absolute;top:400px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://rukminim1.flixcart.com/image/416/416/l0igvww0/mobile/6/8/o/-original-imagcafj5zcxz9wg.jpeg?q=70" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Poco M4 pro 5G </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>19,999</s></span><br><span style="font-size:14px"> INR 17,299 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
