--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ th{font-size:16px}
 
         img{
             height: 300px;
-            object-fit:fill;
+            object-fit:contain;
         }
         #carouselExampleDark,#carouselExampleCaptions,.carousel-item{
             width: 100%;
@@ -473,7 +473,7 @@ display:none}
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 4</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Oppo A74 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
-    <img src="" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Qualcomm Snapdragon 480 (2 Ghz)</span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB (2133 Mhz)  </span><br>
@@ -555,10 +555,10 @@ display:none}
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Realme 9i 5G </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
+<span style="color:blue"> Oppo A74 5G </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 
@@ -566,10 +566,10 @@ display:none}
 <div style="position:absolute;top:400px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://rukminim1.flixcart.com/image/416/416/xif0q/mobile/o/b/a/-original-imaghbequzj25wy2.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
-<div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Realme 9i 5G</span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>19,999</s></span><br><span style="font-size:14px"> INR 16,999 </span></div>
+<div style="display:none;position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
+<span style="color:blue"> Oppo A74 5G</span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>19,999</s></span><br><span style="font-size:14px"> INR 16,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
