--- a/index.html
+++ b/index.html
@@ -563,12 +563,12 @@ display:none}
 </div>
 
 
-<div style="position:absolute;top:400px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
+<div style="display:none;position:absolute;top:400px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
 <img src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
-<div style="display:none;position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
+<div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
 <span style="color:blue"> Oppo A74 5G</span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>19,999</s></span><br><span style="font-size:14px"> INR 16,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
