--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ display:none}
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
+<h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Top10Tech</h3>
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">4 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
@@ -556,7 +557,7 @@ display:none}
 <img src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" class="card-img-top" alt="..." style="object-fit:contain;padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Oppo A74 5G </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
+<span style="color:blue"> Oppo A74 5G </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 
