--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ display:none}
 <div style="height:400px;background-color:none;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
 <br> <br>   <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
-<div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:none">
 <div style="position:absolute;top:0px;height:60px;background-color:#f6f6f6;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">4 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:155px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px">1. Credit and Debit cards</span><br><span style="text-align:left;font-size:12px">2. UPI  </span><br><span style="text-align:left;font-size:12px">3. EMI</span><br><span style="text-align:left;font-size:12px">4. Net Banking</span><br><span style="text-align:left;font-size:12px">5. Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
@@ -864,7 +864,7 @@ display:none}
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Top10tech </h3>
-<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:none">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">4 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
@@ -877,7 +877,7 @@ display:none}
 
 
 
-<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:440px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:440px;font-size:13px;padding:0px;border:none">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 128 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
@@ -896,7 +896,7 @@ display:none}
 <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Realme Narzo 50A </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>15,999</s></span><br><span style="font-size:14px"> INR 12,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 
@@ -907,7 +907,7 @@ display:none}
 <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Realme Narzo 50A </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 15,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
